fix blog config

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Tom TWs blog
+subtitle: MSc Visualization
+author: Tom Torsney-Weir
 simple_search: http://google.com/search
 description:
 
