slight title change

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: Tom TWs blog
+title: Tom Torsney-Weir
 subtitle: MSc Visualization
 author: Tom Torsney-Weir
 simple_search: http://google.com/search
