put the correct site address in the config

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://www.tomtorsneyweir.com
 title: Tom Torsney-Weir
 subtitle: MSc Visualization
 author: Tom Torsney-Weir
