I am a PhD student now

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://www.tomtorsneyweir.com
 title: Tom Torsney-Weir
-subtitle: MSc Visualization
+subtitle: PhD Visualization
 author: Tom Torsney-Weir
 simple_search: http://google.com/search
 description:
