--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "www.tomtorsneyweir.com",
   "dependencies": {
     "foundation": "zurb/bower-foundation#~5.2",
-    "highlightjs": "~8.0.0"
+    "highlightjs": "~8.0.0",
+    "webicons": "https://github.com/adamfairhead/webicons"
   }
 }
