add my master's thesis and tech report to the list

--- a/data/cv.yml
+++ b/data/cv.yml
@@ -8,7 +8,8 @@ Conference publications:
 Other publications:
   type: pubs
   pubs:
-  - 'Torsney-Weir:2011'
+  - 'Torsney-Weir:2012'
+  - 'Torsney-Weir:2011a'
 Invited talks:
   type: other
   content:
