add scala-swing invited talk

--- a/data/cv.yml
+++ b/data/cv.yml
@@ -14,6 +14,8 @@ Other publications:
 Invited talks:
   type: events
   events:
+  - name: '"scala-swing." Vienna Scala meetup group, Vienna, Austria'
+    date: May 6, 2014
   - name: '"Tuner." Visualization and virtual reality research group, University of Leeds, Leeds, UK.'
     date: Sep 19, 2013
   - name: '"Tuner." MADAI workshop, Duke University, Durham, NC.'
