--- a/data/cv.yml
+++ b/data/cv.yml
@@ -26,9 +26,9 @@ Invited talks:
 Education:
   type: events
   events:
-  - name: Simon Fraser University, Burnaby, BC, Canada. MSc in Computer Science.
+  - name: MSc in Computer Science. Simon Fraser University, Burnaby, BC, Canada.
     date: 2012
-  - name: Georgetown University, Washington, DC, USA. BS in Computer Science.
+  - name: BS in Computer Science. Georgetown University, Washington, DC, USA.
     date: 2002
 
 #Software publications:
