--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "foundation": "zurb/bower-foundation#~5.3",
     "highlightjs": "~8.0.0",
-    "webicons": "https://github.com/adamfairhead/webicons"
+    "webicons": "https://github.com/adamfairhead/webicons",
+    "responsive-nav": "~1.0.32"
   }
 }
