--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: ruby
 rvm:
   - 2.0.0
-os:
-  - osx
-brefore_install:
-  - brew install multimarkdown
+before_install:
+  - wget https://github.com/fletcher/MultiMarkdown-4/archive/4.5.3.tar.gz
+  - tar xzf 4.5.3.tar.gz
+  - cd 4.5.3 && ./configure --prefix=/usr && make && make install
 script:
   - bundle exec middleman build
 after_success:
