--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: ruby
 rvm:
   - 2.0.0
 before_install:
-  - wget https://github.com/fletcher/MultiMarkdown-4/archive/4.5.3.tar.gz -O /tmp/mmd-4.5.3.tar.gz
-  - cd /tmp && tar xzvf mmd-4.5.3.tar.gz
-  - cd MultiMarkdown-4-4.5.3 && ./configure --prefix=/usr && make && make install
+  - git clone https://github.com/fletcher/MultiMarkdown-4.git mmd4
+  - cd mmd4
+  - git submodule init
+  - git submodule update
+  - make
+  - make install
 script:
   - bundle exec middleman build
 after_success:
