--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - git submodule init
   - git submodule update
   - make
-  - make install
+  - sudo make install
 script:
   - bundle exec middleman build
 after_success:
