--- a/rakefile
+++ b/rakefile
@@ -5,9 +5,13 @@ end
 
 # setup build environment
 task :setup do
-  sh('bundle', 'install')
-  sh('npm', 'install', 'bower')
-  sh('bower', 'install')
+  deps
+  git_config("Thomas Torsney-Weir")
+end
+
+task :cssetup do
+  deps
+  git_config("Codeship robot")
 end
 
 task :build => [:download_bib] do
@@ -20,5 +24,20 @@ end
 
 task :deploy => [:clean, :build] do
   sh('bundle', 'exec', 'middleman', 'deploy')
+end
+
+# basic setup
+def deps
+  sh('bundle', 'install')
+  sh('npm', 'install', 'bower')
+  sh('bower', 'install')
+end
+
+def git_config(username)
+  sh('git', 'config', 'user.email', 'torsneyt@gmail.com')
+  sh('git', 'config', 'user.name', username)
+  #sh('git', 'config', '--global', 'user.email', 'torsneyt@gmail.com')
+  #sh('git', 'config', '--global', 'user.name', username)
+  sh('git', 'remote', 'add', 'gh-pages', 'git@github.com:gabysbrain/gabysbrain.github.io.git')
 end
 
