--- a/data/cv.yml
+++ b/data/cv.yml
@@ -8,6 +8,7 @@ Conference publications:
 Other publications:
   type: pubs
   pubs:
+  - 'Torsney-Weir:2015'
   - 'Torsney-Weir:2012'
   - 'Torsney-Weir:2011a'
 
@@ -26,6 +27,8 @@ Invited talks:
 Education:
   type: events
   events:
+    #- name: PhD in Computer Science. University of Vienna, Vienna, Austria.
+    #date: present
   - name: MSc in Computer Science. Simon Fraser University, Burnaby, BC, Canada.
     date: 2012
   - name: BS in Computer Science. Georgetown University, Washington, DC, USA.
@@ -40,7 +43,7 @@ Reviewerships:
   type: events
   events:
   - name: IEEE Transactions on Visualization and Computer Graphics.
-    date: 2012-2014
+    date: 2012-2016
   - name: EuroVis.
     date: 2012-2014
   - name: International Conference on Intelligent User Interfaces.
@@ -58,9 +61,23 @@ Teaching assistant appointments:
   - name: CMPT 225 Introduction to Data Structures and Algorithms.
     date: Fall 2010
 
+Professional activities:
+  type: jobs
+  jobs:
+    - title: Student volunteer chair
+      location: IEEE Visualization conference
+      dates:
+        start: January 2016
+        finish: present
+
 Academic positions:
   type: jobs
   jobs:
+  - title: Research assistant
+    location: Visualization and data analysis research group, University of Vienna
+    dates:
+      start: January 2015
+      finish: present
   - title: Research assistant
     location: GrUVi Lab, SFU Computing Science Department
     dates: 
