--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ node_modules
 # Don't publish secrets!
 .google_client_secrets.json
 
+source/stylesheets/syntax
+
 # don't include temporary bibtex file
 all.bib
 
