--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,20 @@
 version: 2.1
 
-orbs:
-  gh-pages: sugarshin/gh-pages@0.0.6
+#orbs:
+  #gh-pages: sugarshin/gh-pages@0.0.6
 
 executors:
   nix_machine:
     docker:
       - image: nixos/nix:latest
-  nm_alt:
-    docker:
-      - image: lnl7/nix:latest
+  #nm_alt:
+    #docker:
+      #- image: lnl7/nix:latest
 
-workflows:
-  deploy_prod:
-    jobs:
-      - build
+#workflows:
+  #deploy_prod:
+    #jobs:
+      #- build
       #- gh-pages/deploy:
           #build-dir: build
           #requires:
