persist build across workflow jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,9 @@ workflows:
   deploy_prod:
     jobs:
       - build
-      - gh-pages/deploy:
-          build-dir: result
+      - deploy_prod
           requires:
             - build
-          ssh-fingerprints: 'ff:22:gs:v6:gg:2g:22:7j:73:gf:ja:36:ff:y2:22:89'
 
 jobs:
   build:
@@ -29,16 +27,30 @@ jobs:
       - restore_cache:
           keys:
             - nix-cache
-      - run:
-          name: setup deploy directory
-          command: mkdir build
       - run: 
           name: build website
-          command: cp -R $(nix-build --no-out-link)/* build/
+          command: nix-build
+      - run: 
+          name: copy website to workplace
+          command: |
+            mkdir -p workspace/build
+            cp -R $(nix-build --no-out-link)/* workspace/build/
       - save_cache:
           key: nix-cache
           paths:
             - /nix/store
+      - persist_to_workspace:
+          root: workspace
+          paths:
+            - build
+  deploy_prod:
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - gh-pages/deploy:
+          build-dir: /tmp/workspace/build
+          ssh-fingerprints: 'ff:22:gs:v6:gg:2g:22:7j:73:gf:ja:36:ff:y2:22:89'
+
 #- run: 
 #name: disable github jekyll
 #shell: touch result/site/.nojekyll
