--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,49 +4,60 @@ orbs:
   gh-pages: sugarshin/gh-pages@0.0.6
 
 executors:
+  basic:
+    docker: 
+      - image: buildpack-deps:jessie
+    working_directory: /tmp
   nix_machine:
     docker:
       - image: nixos/nix:latest
+    working_directory: /tmp
   nm_alt:
     docker:
       - image: lnl7/nix:latest
+    working_directory: /tmp
 
 workflows:
   deploy_prod:
     jobs:
-      build:
-        executor: nix_machine
-        steps:
-          - checkout
-          - restore_cache:
-              keys:
-                - nix-cache
-          - run: 
-              name: build website
-              command: nix-build
-          - run: 
-              name: copy website to workplace
-              command: |
-                mkdir -p workspace/build
-                cp -R $(nix-build --no-out-link)/* workspace/build/
-          - save_cache:
-              key: nix-cache
-              paths:
-                - /nix/store
-          - persist_to_workspace:
-              root: workspace
-              paths:
-                - build
-      deploy_prod:
-        executor: nix_machine
-        requires:
-          - build
-        steps:
-          - attach_workspace:
-              at: /tmp/workspace
-          - gh-pages/deploy:
-              build-dir: /tmp/workspace/build
-              ssh-fingerprints: 'ff:22:gs:v6:gg:2g:22:7j:73:gf:ja:36:ff:y2:22:89'
+      - build
+      - deploy_prod:
+          requires:
+            - build
+
+jobs:
+  build:
+    executor: nix_machine
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - nix-cache
+      - run: 
+          name: build website
+          command: nix-build
+      - run: 
+          name: copy website to workplace
+          command: |
+            mkdir -p workspace/build
+            cp -R $(nix-build --no-out-link)/* workspace/build/
+      - save_cache:
+          key: nix-cache
+          paths:
+            - /nix/store
+      - persist_to_workspace:
+          root: workspace
+          paths:
+            - build
+
+ deploy_prod:
+   executor: nix_machine
+   steps:
+     - attach_workspace:
+         at: /tmp/workspace
+     - gh-pages/deploy:
+         build-dir: /tmp/workspace/build
+         ssh-fingerprints: 'ff:22:gs:v6:gg:2g:22:7j:73:gf:ja:36:ff:y2:22:89'
 
 #- run: 
 #name: disable github jekyll
