--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,15 @@ executors:
   basic:
     docker: 
       - image: buildpack-deps:jessie
-    working_directory: /tmp
+        #working_directory: /tmp
   nix_machine:
     docker:
       - image: nixos/nix:latest
-    working_directory: /tmp
+        #working_directory: /tmp
   nm_alt:
     docker:
       - image: lnl7/nix:latest
-    working_directory: /tmp
+        #working_directory: /tmp
 
 workflows:
   deploy_prod:
