add back basic image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2.1
 
 executors:
+  basic:
+    docker:
+      - image: cimg/base:2020.01
   node:
     docker:
       - image: circleci/node:current
