set up deploy keys

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,16 +56,22 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: build
+          at: workspace
       - run:
           name: Install and configure dependencies
           command: |
-            sudo npm install -g gh-pages@2.0.1
+            npm install gh-pages --save-dev
             git config user.email "ci-build@tomtorsneyweir.com"
             git config user.name "ci-build"
       - run:
-          name: Deploy docs to gh-pages branch
-          command: gh-pages --dist /tmp/workspace/build
+          name: Disable jekyll builds
+          command: touch workspace/build/.nojekyll
+      - add_ssh_keys:
+          fingerprints:
+            - "04:20:b3:77:32:f8:06:6f:02:39:01:d3:85:54:e0:15"
+      - run:
+          name: Deploy to gh-pages branch
+          command: gh-pages --dotfiles --message "[skip ci] Updates" --dist workspace/build
 
 #- run: 
 #name: disable github jekyll
