put website build back in

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,26 +26,24 @@ workflows:
 
 jobs:
   build:
-    executor: basic
-    #executor: nixos
+    executor: nixos
     steps:
       - checkout
-      #- restore_cache:
-          #keys:
-            #- nix-cache
-      #- run: 
-          #name: build website
-          #command: nix-build
+      - restore_cache:
+          keys:
+            - nix-cache
+      - run: 
+          name: build website
+          command: nix-build
       - run: 
           name: copy website to workplace
           command: |
             mkdir -p workspace/build
-            #cp -R $(nix-build --no-out-link)/* workspace/build/
-            echo "hello world" > workspace/build/index.html
-      #- save_cache:
-          #key: nix-cache
-          #paths:
-            #- /nix/store
+            cp -R $(nix-build --no-out-link)/* workspace/build/
+      - save_cache:
+          key: nix-cache
+          paths:
+            - /nix/store
       - persist_to_workspace:
           root: workspace
           paths:
@@ -75,8 +73,4 @@ jobs:
       - run:
           name: Deploy to gh-pages branch
           command: node_modules/gh-pages/bin/gh-pages.js --dotfiles --message "[skip ci] Updates" --dist workspace/build
-
-#- run: 
-#name: disable github jekyll
-#shell: touch result/site/.nojekyll
 
