--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ workflows:
       - deploy_prod:
           requires:
             - build
+    filters:
+      ignore:
+        - gh-pages
 
 jobs:
   build:
