--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,8 @@ executors:
       - image: circleci/node:current
   nixos:
     docker:
-      - image: lnl7/nix:2020-09-11
+      #- image: lnl7/nix:2020-09-11
+      - image: lnl7/nix:latest
 
 workflows:
   deploy_prod:
@@ -29,7 +30,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            nix-channel --update
+            #nix-channel --update
             nix-env -u
             nix-env -iA nixpkgs.pandoc
       - checkout
