--- a/gabysbrain-website.cabal
+++ b/gabysbrain-website.cabal
@@ -9,7 +9,10 @@ executable site
   build-depends:    base == 4.*
                   , hakyll == 4.13.*
                   , containers
+                  , filepath
+                  , process
                   , pandoc
+                  , text
   ghc-options:      -threaded
   default-language: Haskell2010
 
