need some dependencies for xelatex

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,10 @@ jobs:
           command: |
             nix-channel --update
             nix-env -u
+            nix-env -iA \
+              nixpkgs.pandoc
+              nixpkgs.pandoc-citeproc
+              nixpkgs.texlive.combined.scheme-full
       - checkout
       - run:
           name: setup cachix
