--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ jobs:
           command: |
             nix-channel --update
             nix-env -u
+            nix-env -iA \
+              nixpkgs.texlive.combined.scheme-full
       - checkout
       - run:
           name: setup cachix
