--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "gh-pages": "^3.1.0"
   },
   "scripts": {
-    "deploy": "gh-pages --dotfiles -d workspace/build"
+    "deploy": "gh-pages --dotfiles -d workspace/build --message '[skip ci] Update"
   }
 }
